# try-gtests

./: .gitignore  CMakeLists.txt  Dockerfile
.github/workflows/: c++-linter.yml  c-cpp.yml  docker-build.yml
include/: Math.hpp
src/: Math.cpp  main.cpp
tests/: CMakeLists.txt
tests/include/: Tests.hpp
tests/src/: main.cpp
